# tensorbase

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/: auto-merge.yml  dependabot.yml  dependabot.yml.disable
.github/workflows/: base_checks.yml  base_integ_sanity_checks.yml  base_release.yml  basic_checks.yml  dependabot_auto_merge.yml
arrow-datafusion/: README.md
arrow-datafusion/arrow/: Cargo.toml
arrow-datafusion/arrow-flight/src/: arrow.flight.protocol.rs
arrow-datafusion/arrow/src/: ffi.rs
arrow-datafusion/datafusion/: Cargo.toml
arrow-datafusion/datafusion/src/: scalar.rs
arrow-datafusion/datafusion/tests/: sql.rs
clients/rs/: Cargo.toml
crates/: README.md
crates/arrow/: Cargo.toml
crates/arrow-flight/: Cargo.toml
crates/arrow/src/: ffi.rs  temporal_conversions.rs
crates/base/: Cargo.toml
crates/base/benches/: bench_syscalls.rs
crates/base/proc_macro/: Cargo.toml
crates/base/proc_macro/src/: lib.rs
crates/base/src/: codec.rs  contract.rs  datetimes.rs  errors.rs  errs.rs  eval.rs  fs.rs  fuzz.rs  hash.rs  lib.rs  mem.rs  mmap.rs  strings.rs  syscalls.rs  utils.rs  uuid.rs
crates/base/src/syscalls/: api.rs  arm-linux.rs  x86_64-linux.rs
crates/base/tests/: proc_macro_tests.rs
crates/base_ops/: Cargo.toml  build.rs
crates/base_ops/libbops/: CMakeLists.txt  baseops.c  baseops.h  prepare_headers.sh
crates/base_ops/src/: baseops.rs  import.rs  table.rs
crates/base_ops/src/import/: csv.rs
crates/base_ops/tests/data/: trips_sample.csv
crates/base_shell/: Cargo.toml  build.rs
crates/base_shell/src/: baseshell.rs  repl.rs
crates/base_shell/src/repl/: command.rs  help.rs  parameter.rs  value.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: client.rs  prelude.rs
crates/client/src/compression/: mod.rs
crates/client/src/pool/: builder.rs  mod.rs  options.rs  recycler.rs
crates/client/src/protocol/: block.rs  column.rs  command.rs  decoder.rs  encoder.rs  insert.rs  mod.rs  packet.rs  query.rs  simd.rs  value.rs
crates/client/src/sync/: waker_set.rs
crates/client/src/types/: mod.rs  parser.rs
crates/datafusion/: Cargo.toml
crates/datafusion/src/: lib.rs  scalar.rs
crates/datafusion/tests/: sql.rs
crates/datafusion_tests/: Cargo.toml
crates/datafusion_tests/tests/: ch_fns.rs  clickhouse.rs
crates/engine/: Cargo.toml
crates/engine/src/: datafusions.rs  errs.rs  lib.rs  mysql.rs  remote.rs  types.rs
crates/engine/tests/: df_tests.rs
crates/ir/: Cargo.toml
crates/ir/benches/: bench_parse.rs
crates/ir/src/: bir.rs  bql.pest  codegen.rs  intern.rs  lib.rs  meta.rs  parse.rs
crates/ir/src/meta/: conf.rs  schemas.rs
crates/ir/tests/: conf_tests.rs  parser_tests.rs  schemas_tests.rs
crates/ir/tests/common/: mod.rs
crates/ir/tests/res/tpcds_20/: query1.sql  query93.sql
crates/ir/tests/res/tpcds_20_exec_plan/: q28_plan.txt
crates/ir/tests/res/tpch/: q1.sql  q20.sql_like  q3.sql  q4.sql_exists  q5.sql  q6.sql  q8.sql
crates/lang/: Cargo.toml
crates/lang/benches/: bench_parse.rs
crates/lang/src/: bql.pest  errs.rs  lib.rs  parse.rs
crates/lang/tests/: parser_tests.rs
crates/lang/tests/common/: mod.rs
crates/lang/tests/res/tpcds_20/: query54.sql
crates/lang/tests/res/tpcds_20_exec_plan/: q1_plan.txt
crates/lang/tests/res/tpch/: q10.sql  q12.sql  q14.sql_like  q15.sql  q7.sql
crates/lightjit/: Cargo.toml
crates/lightjit/src/: builtins.rs  (+3 more)
crates/meta/: Cargo.toml
crates/meta/src/: confs.rs  errs.rs  lib.rs  types.rs
crates/meta/src/store/: mod.rs  parts.rs  parts_cache.rs  sys.rs
crates/parquet/: Cargo.toml
crates/runtime/: Cargo.toml  build.rs
crates/runtime/ker_lib/: CMakeLists.txt  ker_lib.c  ker_runner.c
crates/runtime/src/: errs.rs  jit.rs  lib.rs  mgmt.rs  read.rs  types.rs  write.rs
crates/runtime/src/ch/: blocks.rs  codecs.rs  messages.rs  mod.rs  protocol.rs
crates/runtime/src/mysql/: mod.rs
crates/runtime/tests/: basic_check.rs  basic_check_c_lib.h  basic_check_c_src.c  basic_check_c_src_2.c  system_tests.rs
crates/runtime/tests/confs/: base.conf
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  mysql_server.rs  server.rs
crates/server/tests/confs/: base.conf  base_tls.conf  base_with_remote_db.conf
crates/server/tests/confs/certs/: cert.pem  key.pem
crates/server_mysql/: Cargo.toml  README.md
crates/server_mysql/examples/: psql_as_mysql.rs  serve_one.rs
crates/server_mysql/src/: commands.rs  lib.rs  packet.rs  resultset.rs  writers.rs
crates/server_mysql/src/value/: decode.rs  encode.rs
crates/server_mysql/tests/: async.rs  main.rs
crates/test_base/: Cargo.toml
crates/test_base/slt/: CMakeLists.txt  README.md  slt.cpp  slt_duckdb.hpp
crates/test_utils/: Cargo.toml
crates/tests_integ/: Cargo.toml
crates/tests_integ/benches/: bench_ingestion.rs
crates/tests_integ/ch_client/: Cargo.toml  README.md
crates/tests_integ/ch_client/src/: client.rs  errors.rs  lib.rs
crates/tests_integ/ch_client/src/pool/: builder.rs  disconnect.rs  mod.rs  recycler.rs  util.rs
crates/tests_integ/ch_client/src/protocol/: block.rs  code.rs  column.rs  decoder.rs  insert.rs  value.rs
crates/tests_integ/ch_client/src/sync/: mod.rs
crates/tests_integ/ch_client/src/types/: decimal.rs  mod.rs
crates/tests_integ/docs/: nyc_taxi_trips_lite.md
crates/tests_integ/sql_test_scripts/: basic_checks.sql
crates/tests_integ/src/: mysql_client.rs  sql_test_runner.rs
crates/tests_integ/tests/: common.rs  sanity_checks.rs  sanity_checks_mysql.rs
crates/tests_integ/tpch/: tpch_stress.sql
docs/: CONTRIBUTING.md  arch.md  benchmarks.md  books.md  dev.md  docs.md  get_started_developers.md  get_started_users.md  lang.md  rfcs.md  summer_2021_ospp.md  try.md  who_using.md
project/: Dockerfile  Dockerfile_ubuntu
samples/: README.md  nyc_taxi_create_table_sample.sql  trips_1m.csv
samples/conf_sample/: base.conf
samples/data_bin/: 0  1  2  meta
samples/schema_bin/: cat
specs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  license_template.txt
tools/: makeheaders  makeheaders.c
(+100 files in other folders)
