[workspace]
members = [
    "crates/meta",
    "crates/lang",
    "crates/runtime",
    "crates/base",
    "crates/lightjit",
    "crates/server",
    "crates/engine",
    "crates/client",
    "crates/test_utils",
    "crates/tests_integ",
    "crates/arrow",
    "crates/arrow-flight",
    "crates/datafusion",
    "crates/parquet",
]

[profile.release]
# incremental = true
# debug = 1 # just line info
opt-level = 3
lto = 'thin'
# lto = 'fat'
# codegen-units = 1
# incremental = false

[profile.bench]
opt-level = 3
lto = 'thin'
# lto = 'fat'
# codegen-units = 1
# incremental = false
