[package]
name = "base_ops"
version = "0.1.0"
authors = ["Jin Mingjian"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base = { path = "../base" }
ir = { path = "../ir" }
clap = "3.0.0-beta.1"
memmap = "0.7"
toml = "0.5"
# ifmt = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
simplelog = "0.8"
rayon = "1.3"
crossbeam = "0.7"
btoi = "0.4"
chrono = "0.4"
itoa = "0.4"
bytes = "0.5.6"
csv = "1.1.5"

[build-dependencies]
cmake = "0.1"
base = { path = "../base" }

[dev-dependencies]
test_base = { path = "../test_base" }

[[bin]]
name = "baseops"
path = "src/baseops.rs"
