[package]
name = "client"
version = "0.1.0"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>", "Jin Mingjian <jin.phd@gmail.com>"]
edition = "2018"

[dependencies]
clickhouse-driver-cthrs = { version = "0.1.1" }
clickhouse-driver-lz4 = { version = "0.1.0" }

bytes = "1.0"
thiserror = "1.0"
log = "0.4.8"
url = "^2"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "io-util", "time", "net"] }
tokio-native-tls = { version = "0.3.0", optional = true }
pin-project-lite = "^0.2"
futures = "0.3.7"
hostname = "^0.3"
chrono = "^0.4"
chrono-tz = "^0.5"
crossbeam = "^0.7"
slab = "0.4.2"
parking_lot = "^0.11"
uuid = { version = "^0.8", features = ["v4"] }
lazy_static = "^1.4"
rand = "0.8"
byteorder = "^1.3"

[features]
tls = ["tokio-native-tls"]
int128 = []
extra = []

# [[example]]
# name = "insert-select"

# [[example]]
# name = "bulk-insert"

# [[example]]
# name = "select"

# [[example]]
# name = "array"

# [[test]]
# name = "pool"

# [[test]]
# name = "query"

# [[test]]
# name = "insert"
[lib]
doctest = false
