[package]
name = "datafusion_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
base = { path = "../base" }
arrow = { path = "../arrow", features = ["prettyprint"] }
datafusion = { path = "../datafusion", features = ["simd"] }
