[package]
name = "engine"
version = "0.1.0"
authors = ["TensorBase"]
edition = "2018"

[dependencies]
base = { path = "../base" }
lang = { path = "../lang" }
meta = { path = "../meta" }
client = { path = "../client" }
typed-arena = "2.0"
thiserror = "1.0"
indexmap = "1.6"
log = "0.4"
itoa = "0.4"
libc = "0.2"
arrow = { path = "../arrow", features = ["simd"] }
datafusion = { path = "../datafusion", features = ["simd"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
mysql = "21.0.1"
mysql_common = "0.28.2"
num-bigint = "0.3.0"
