[package]
name = "ir"
version = "0.1.0"
authors = ["Jin Mingjian <jin.phd@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base = { path = "../base" }
typed-arena = "2.0"
pest = "2.1"
pest_derive = "2.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.1"
toml = "0.5"
once_cell = "1.4"
num_cpus = "1.0"

[dev-dependencies]

[[bench]]
name = "bench_parse"
harness = false
