[package]
authors = ["TensorBase, and its contributors"]
edition = "2018"
name = "meta"
version = "0.1.0"

[dependencies]
sled = "0.34"
thiserror = "1.0"
log = "0.4"
toml = "0.5"
num-traits = "0.2"
itoa = "0.4"
btoi = "0.4"
libc = "0.2"
dashmap = "4.0"
roaring = "0.7.0"
base = { path = "../base" }
arrow = { path = "../arrow" }

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
baselog = { git = "https://github.com/tensorbase/baselog.git", branch = "main" }
walkdir = "2.3"
chrono-tz = "0.5"
