[package]
authors = ["TensorBase, and its contributors"]
edition = "2018"
name = "runtime"
version = "0.1.0"

[dependencies]
libc = "0.2"
thiserror = "1.0"
log = "0.4"
bytes = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
lzzzz = "0.8"
thread_local = "1.0"
dashmap = "4.0"
clap = "3.0.0-beta.2"
mysql = "21.0.1"
base = { path = "../base" }
meta = { path = "../meta" }
lang = { path = "../lang" }
engine = { path = "../engine" }
basejit = { git = "https://github.com/tensorbase/basejit.git", branch = "main" }
client = { path = "../client" }
baselog = { git = "https://github.com/tensorbase/baselog.git", branch = "main" }
clickhouse-rs-cityhash-sys = "0.1.2"
arrow = { path = "../arrow" }
datafusion = { path = "../datafusion", features = ["simd"] }
server_mysql = { path = "../server_mysql" }
tokio = { version = "1.0", features = ["io-util", "io-std"] }
async-trait = "0.1.40"
bigdecimal = "0.3.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }
toml = "0.5"
zerocopy = "0.5"
anyhow = "1.0"
rand = "0.8"
walkdir = "2.3"
