[package]
name = "server"
version = "0.1.0"
authors = ["TensorBase, and its contributors"]
edition = "2018"

[dependencies]
actix-codec = "0.3.0"
actix-rt = "1.1.1"
actix-server = "1.0.4"
actix-service = "1.0.6"
bytes = "1.0.1"
log = "0.4"
# num-traits = "0.2"
thiserror = "1.0"
meta = { path = "../meta" }
runtime = { path = "../runtime" }
baselog = { git = "https://github.com/tensorbase/baselog.git", branch = "main"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
