[package]
name = "server"
version = "0.1.0"
authors = ["TensorBase, and its contributors"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-rustls = "0.22"
bytes = "1.0"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
meta = { path = "../meta" }
runtime = { path = "../runtime" }
baselog = { git = "https://github.com/tensorbase/baselog.git", branch = "main" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
