[package]
name = "tests_integ"
version = "0.1.0"
authors = ["TensorBase, and its contributors"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
ch_client = { path = "./ch_client" }
url = "^2"
tokio = { version = "0.2", features = [
    "rt-core",
    "sync",
    "tcp",
    "time",
    "dns",
    "stream",
    "test-util",
    "io-util",
    "macros",
] }
rand = { version = "0.8.0", features = ["small_rng"] }
base = { path = "../base" }

[dev-dependencies]
futures-util = { version = "0.3", features = ["sink"] }
anyhow = "1.0.32"
halfbrown = "0.1.11"
paste = "1.0.1"
baselog = { git = "https://github.com/tensorbase/baselog.git", branch = "main" }
walkdir = "2.3.1"
chrono = "0.4"

[[bin]]
name = "sql_test_runner"
path = "src/sql_test_runner.rs"

[[bench]]
name = "bench_ingestion"
harness = false