[package]
authors = ["Jin Mingjian <jin.phd@gmail.com>"]
edition = "2018"
name = "base_proc_macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.21"
quote = "1.0.7"
# regex = "1.4"
syn = { version = "1.0.41", features = ["full", "parsing", "extra-traits"] }
any = "0.0.0"
